# page_loader

./: .gitignore  .replit  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: page-loader.yml
page-loader/engine/: parse_cli_args.py
page-loader/scripts/: page-loader.py
page_loader/: __init__.py
page_loader/engine/: change_links.py  dicts.py  download.py  download_content.py  links.py  logger_config.py  logging_config.py  parse_cli_args.py  response.py  save_file.py  services.py  tools.py  url_parse.py
page_loader/scripts/: page_loader.py  page_loader_script.py
tests/: test_connection.py  test_page_loader.py
tests/fixtures/: python-org.html
tests/fixtures/downloads/: page-loader-hexlet-repl-co.html
tests/fixtures/downloads/changed/: page-loader-hexlet-repl-co.html
